--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,8 @@
 %html
   %head
     %title AMASS Media
-    = javascript_include_tag 'application' 
+    = javascript_include_tag 'application'
+    = javascript_include_tag 'viewproject'
     = stylesheet_link_tag 'application'
     = stylesheet_link_tag 'bootstrap'
     = stylesheet_link_tag 'browseprojects'
