--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -3,33 +3,36 @@
 %h1#name
   = @project.name
 
-%h2#organization
+%h3#organization
   = link_to @project.organization, project_path(@project.id)
 
 %div.col-md-8.col-md-offset-2#project-div
 
-  %div.row
+  %div.row#pic-n-info
     %div.col-md-8#image-div
       =image_tag "lorem-ipsum.jpg", :id => "ourimage"
-    %div.row
-      %div.col-md-4#info-block
-        %h5
-          Category
-        %h3
-          = @project.category
-        %h5
-          Location
-        %h3
-          = @project.location
-        %h5
-          Status
-        %h3
-          = @project.status
-        %h5
-          Budget
-        %h3
-          = @project.budget
-        = button_to "Join This Project", project_path(@project.id), :id => "join", :class => "btn-primary"
+    %div.col-md-4.info-block#top-block
+      %h5.info-title
+        Category
+      %h2.info-detail
+        = @project.category
+      %h5.info-title
+        Location
+      %h2.info-detail
+        = @project.location
+      %h5.info-title
+        Status
+      %h2.info-detail
+        = @project.status
+      %h5.info-title
+        Budget
+      %h2.info-detail
+        = "$ #{@project.budget}"
+      %div#join
+        = button_to "Join This Project", project_path(@project.id), :class => "btn btn-primary btn-lg"
+
+    %div.col-md-4.info-block
+      %h5 The Nonprofit
  
   %p
     %b Blurb:
