--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -29,24 +29,29 @@
       %h2.info-detail
         = "$ #{@project.budget}"
       %div#join
-        = button_to "Join This Project", project_path(@project.id), :class => "btn btn-primary btn-lg"
+        = button_to "Join This Project", project_path(@project.id), :class => "btn btn-primary btn-lg", :method => 'get'
 
     %div.col-md-4.info-block
-      %h5 The Nonprofit
- 
-  %p
-    %b Blurb:
-    = @project.blurb
-  %p
-    %b Nonprofit mission:
-    = @project.nonprofit_mission
-  %p
-    %b Description:
-    = @project.description 
-  %p
-    %b Deadline:
-    = @project.deadline
+      %h3
+        = @project.name
+      %h4
+        = @project.nonprofit_mission
+
+      
+    %div.col-md-8.info-block#bottom-block
+      %h2#blurb
+        = @project.blurb
+      %h3
+        %b
+          Deadline
+      %h4
+        = @project.deadline
+      %h3
+        %b
+          Description
+      %h4
+        = @project.description
   
 
-  \|
-  = link_to 'Back', projects_path
+  = link_to raw("<i class=\"glyphicon-arrow-left\">Back</i>"), projects_path, :class => "btn btn-primary btn-md", :id => "back-button", :method => 'get'
+    
