--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -4,26 +4,24 @@
 #wrapper
   #sidebar-wrapper  
     %h3{align: "left"}= link_to 'All Projects', projects_path(:filter=>'all')
-    %h3{align: "left"}Specialties  
-    %h4{align: "left"}= link_to 'Community', projects_path(:filter=>'specialities', :by => 'Community')
-    %h4{align: "left"}= link_to 'Education', projects_path(:filter=>'specialities', :by =>'Education')
-    %h4{align: "left"}= link_to 'Housing', projects_path(:filter=>'specialities', :by => 'Housing')
+
+    %h3{align: "left"}Type  
+    %h4{align: "left"}= link_to 'Community', projects_path(:filter=>'Type', :by => 'Community')
+    %h4{align: "left"}= link_to 'Education', projects_path(:filter=>'Type', :by =>'Education')
+    %h4{align: "left"}= link_to 'Housing', projects_path(:filter=>'Type', :by => 'Housing')
 
     %h3{align: "left"}Region
-    %h4{align: "left"}= link_to 'Alameda', projects_path(:filter=>'region', :by => 'Alameda')
-    %h4{align: "left"}= link_to 'San Francisco', projects_path(:filter=>'region', :by => 'San Francisco')
-    %h4{align: "left"}= link_to 'San Mateo', projects_path(:filter=>'region', :by => 'San Mateo')
-    %h4{align: "left"}= link_to 'Santa Clara', projects_path(:filter=>'region', :by => 'Santa Clara')
+    %h4{align: "left"}= link_to 'Alameda', projects_path(:filter=>'Region', :by => 'Alameda')
+    %h4{align: "left"}= link_to 'San Francisco', projects_path(:filter=>'Region', :by => 'San Francisco')
+    %h4{align: "left"}= link_to 'San Mateo', projects_path(:filter=>'Region', :by => 'San Mateo')
+    %h4{align: "left"}= link_to 'Santa Clara', projects_path(:filter=>'Region', :by => 'Santa Clara')
 
-    %h3{align: "left"}Deadline
-    %h4{align: "left"}= link_to '31-Dec-2014', projects_path(:filter=>'deadline', :by => '31-Dec-2014')
-    %h4{align: "left"}= link_to '28-Feb-2014', projects_path(:filter=>'deadline', :by => '28-Feb-2014')
-    %h4{align: "left"}= link_to '31-Jan-2014', projects_path(:filter=>'deadline', :by => '31-Jan-2014')
+    %h3{align: "left"}= link_to 'New Posts', projects_path(:filter=>'New Posts')
 
     %h3{align: "left"}Budget
-    %h4{align: "left"}= link_to '$$$', projects_path(:filter=>'budget', :by => '$$$')
-    %h4{align: "left"}= link_to '$$', projects_path(:filter=>'budget', :by => '$$')
-    %h4{align: "left"}= link_to '$', projects_path(:filter=>'budget', :by => '$')
+    %h4{align: "left"}= link_to '$$$', projects_path(:filter=>'Budget', :by => '$$$')
+    %h4{align: "left"}= link_to '$$', projects_path(:filter=>'Budget', :by => '$$')
+    %h4{align: "left"}= link_to '$', projects_path(:filter=>'Budget', :by => '$')
 
 
   #page-content-wrapper
