--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -4,13 +4,13 @@
   %div.banner
     %div.col-md-6.col-md-offset-2#Learn
       %h3 Curious about AMASS Media?
-      %div.btn.btn-success= link_to 'Learn More', root_path, :method => :get
+      %div.btn#learn-more= link_to 'Learn More', root_path, :method => :get
   %div.span5.offset1
 
 %div.row
   %div.col-md-6.col-sm-6#feat Featured Projects
 
-%div.row#project-div
+%div.row#index-project-div
   %div.col-sm-4.col-md-3
     %div.thumbnail
       =image_tag "balloon.jpg"
