--- a/app/assets/stylesheets/viewproject.css
+++ b/app/assets/stylesheets/viewproject.css
@@ -1,6 +1,9 @@
 #project-div {
-  background-color: white;
+  background-color:#1abc9c;
   border-radius: 10px;
+  padding-left:3%;
+  padding-right:3%;
+  margin-bottom:5%;
 
 }
 
@@ -38,7 +41,7 @@
   border-radius: 10px;
 }
 .info-block {
-  background-color:#eff7ff;
+  background-color:#f7f7f9;
   border-radius:10px;
   padding-bottom: 3%;
   padding-top: 1.5%;
