--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -35,8 +35,8 @@
                 %li{role: "presentation"}
                   %a.drop-items{role: "menuitem", tabindex: "-1"}= link_to 'Logout', destroy_user_session_path, :method => 'delete'
           - else
-            %div.btn.btn-success#login= link_to 'Login', new_user_session_path,:method =>:get
-            %div.btn.btn-success#login= link_to 'Sign Up', new_user_registration_path, :method =>:get
+            %div.btn#login= link_to 'Login', new_user_session_path,:method =>:get
+            %div.btn#login= link_to 'Sign Up', new_user_registration_path, :method =>:get
            
          
               
