--- a/app/views/filmmakers/show.html.haml
+++ b/app/views/filmmakers/show.html.haml
@@ -10,5 +10,11 @@
   %b Type:
   = @filmmaker.user.profilable_type
 %p
+  %b Profilable ID:
+  = @filmmaker.user.profilable_id
+%p
+  %b User ID:
+  = @filmmaker.user.id
+%p
   %b Username:
   = @filmmaker.user.username
