--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,11 +24,10 @@
           - if user_signed_in?
             %li.dropdown.clearfix
               %a.dropdown-toggle#welcome-user{"data-toggle" => "dropdown", href: "#", role: "button"}
-                Welcome, #{current_user.name}
+                Hi #{current_user.name}
                 %b.caret
               %ul.dropdown-menu{"aria-labelledby" => "dLabel", role: "menu"}
-                %li{role: "presentation"}
-                  %a.drop-items{href: "#", role: "menuitem", tabindex: "-1"}
+                %li.drop-items{href: "#", role: "menuitem", tabindex: "-1"}
                   - if current_user.filmmaker?
                     = link_to "Profile", filmmaker_path(current_user.profilable.id)
                   - if current_user.nonprofit?
